text align center; fix audio; max-height 500 on work highlight images

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ a {
     transition: border-bottom .05s;
 
     &:hover {
-        border-bottom: 2px solid $black;
+        border-bottom: 3px solid $black;
     }
 }
 
